antsurance/force-app/main/default/objects/Policy_Coverage__c/Policy_Coverage__c.object-meta.xml
<CustomObject>
    <description>One coverage on a policy, such as collision on an auto policy or dwelling on a homeowners policy. It holds the limit and how it applies, the deductible, and the premium for that coverage with its share of the policy premium.</description>
    <label>Policy Coverage</label>
    <nameField>
        <label>Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>