antsurance/force-app/main/default/objects/Policy_Coverage__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The kind of protection this coverage gives.</description>
    <label>Category</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Collision</fullName>
            </value>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Medical Payments</fullName>
            </value>
            <value>
                <fullName>Uninsured Motorist</fullName>
            </value>
            <value>
                <fullName>Dwelling</fullName>
            </value>
            <value>
                <fullName>Personal Property</fullName>
            </value>
            <value>
                <fullName>Loss of Use</fullName>
            </value>
            <value>
                <fullName>Business Property</fullName>
            </value>
            <value>
                <fullName>Business Income</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>