antsurance/force-app/main/default/objects/Policy_Coverage__c/fields/Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Amount__c</fullName>
    <description>What the policyholder pays before this coverage applies.</description>
    <label>Deductible</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>