antsurance/force-app/main/default/objects/Policy_Coverage__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>When this coverage started on the policy.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>