antsurance/force-app/main/default/objects/Policy_Coverage__c/fields/Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Limit_Amount__c</fullName>
    <description>The most this coverage pays for a covered loss.</description>
    <label>Limit</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>