antsurance/force-app/main/default/objects/Policy_Coverage__c/fields/Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type__c</fullName>
    <description>How the limit is applied when a claim is paid.</description>
    <label>Limit Applies</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Occurrence</fullName>
            </value>
            <value>
                <fullName>Per Person</fullName>
            </value>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>Replacement Cost</fullName>
            </value>
            <value>
                <fullName>Actual Cash Value</fullName>
            </value>
            <value>
                <fullName>Statutory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>