antsurance/force-app/main/default/objects/Policy_Coverage__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <description>The policy this coverage belongs to.</description>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Coverages</relationshipLabel>
    <relationshipName>Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>