antsurance/force-app/main/default/objects/Policy_Coverage__c/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <description>The part of the annual premium charged for this coverage.</description>
    <label>Premium</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>