antsurance/force-app/main/default/objects/Policy_Coverage__c/fields/Premium_Share__c.field-meta.xml
<CustomField>
    <fullName>Premium_Share__c</fullName>
    <description>This coverage premium as a share of the policy annual premium.</description>
    <label>Share of Premium</label>
    <formula><![CDATA[IF(BLANKVALUE(Policy__r.Annual_Premium__c, 0) = 0, 0, Premium_Amount__c / Policy__r.Annual_Premium__c)]]></formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>