antsurance/force-app/main/default/objects/Policy_Coverage__c/fields/What_Is_Covered__c.field-meta.xml
<CustomField>
    <fullName>What_Is_Covered__c</fullName>
    <description>Plain-language description of what this coverage pays for and its main exclusions. Markdown is rendered on the record page.</description>
    <label>What Is Covered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>